# PILGRIM

./: )    let mut drift = CognitiveDriftCartridge::new();se pilgrim_console::Console;itiveDriftCartridge,euroDiscordanceCartridge,  .gitignore  Cargo.toml  README.md  cargo  pilgrim_v1_frozen.sha256
crates/: Cargo.toml
crates/aegis/: AEGIS_SHA256SUMS.txt  AegisSpec.md  Cargo.toml
crates/aegis/src/: lib.rs  lib.rs;  model.rs  policy.rs  receipts.rs
crates/amethyst_aegis/: Cargo.toml
crates/amethyst_aegis/src/: model.rs
crates/amethyst_invariants/: Cargo.toml
crates/amethyst_invariants/src/: lib.rs
crates/dre_demo/: Cargo.toml
crates/dre_demo/src/: main.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/pilgrim_bridge/: Cargo.toml
crates/pilgrim_bridge/src/: lib.rs
crates/pilgrim_console/: Cargo.toml
crates/pilgrim_console/src/: lib.rs
crates/pilgrim_console_demo/: Cargo.toml
crates/pilgrim_console_demo/src/: main.rs
crates/pilgrim_core/: Cargo.toml
crates/pilgrim_core/src/: cartridge.rs  constraints.rs  contract.rs  engine.rs  lib.rs  receipt.rs  store.rs  trace.rs
crates/pilgrim_core/tests/: engine_constraints_tests.rs  engine_tests.rs
crates/pilgrim_dre/: Cargo.toml
crates/pilgrim_dre/src/: lib.rs
crates/pilgrim_gift/: Cargo.toml
crates/pilgrim_gift/src/: lib.rs
crates/pilgrim_handshake/: Cargo.toml
crates/pilgrim_handshake/src/: bridge_api.rs  lib.rs
crates/pilgrim_handshake/tests/: contract_tests.rs
crates/pilgrim_identity/: Cargo.toml
crates/pilgrim_identity/src/: lib.rs
crates/pilgrim_mandate/: Cargo.toml
crates/pilgrim_mandate/src/: lib.rs
crates/pilgrim_memory_seal/: Cargo.toml
crates/pilgrim_memory_seal/src/: lib.rs
crates/pilgrim_sentinel/: Cargo.toml
crates/pilgrim_sentinel/src/: invariant.rs  invariants.rs  ledger.rs  lib.rs  sentinel.rs
crates/pilgrim_sentinel/tests/: drift_ledger.rs  (+2 more)
src/console/: contracts.rs
(+8 files in other folders)
