[workspace]
members = [
"crates/pilgrim_memory_seal",
  "crates/pilgrim_core",
  "crates/pilgrim_handshake",
  "crates/pilgrim_bridge",
  "crates/pilgrim_sentinel",
  "crates/pilgrim_identity",
  "crates/pilgrim_mandate",
  "crates/pilgrim_console",
  "crates/pilgrim_gift",
  "crates/pilgrim_console_demo",

  # NEW — next cartridge crate
  "crates/pilgrim_memory_seal", "crates/pilgrim_dre", "crates/dre_demo",
]

resolver = "2"
