[package]
name = "pilgrim_bridge"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pilgrim_cli"
path = "src/bin/pilgrim_cli.rs"

[[bin]]
name = "pilgrim_http"
path = "src/bin/pilgrim_http.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"

# Bridge must validate using the handshake layer:
pilgrim_handshake = { path = "../pilgrim_handshake" }

# (Used later for B)
tiny_http = "0.12"
