[package]
name = "pilgrim_bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pilgrim_bridge_http"
path = "src/bin/pilgrim_bridge_http.rs"

[dependencies]
# Workspace crates
pilgrim_core = { path = "../pilgrim_core" }
pilgrim_handshake = { path = "../pilgrim_handshake" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto / encoding
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# HTTP
tiny_http = "0.12"
