[package]
name = "pilgrim_handshake"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Amethyst Pilgrim Handshake v1 (deterministic request/response contract)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
serde_json = "1"
